# vts

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  IDEAS.md  LICENSE-MIT  README.md  justfile  noxfile.py  pyproject.toml  ruff.toml  scratchpad.ipynb  scratchpad.py
.github/workflows/: vts_core_ci.yml
crates/vts/: Cargo.toml
crates/vts/src/: lib.rs  stringtable.rs
crates/vts/src/arch/: component.rs
crates/vts_abc/: Cargo.toml
crates/vts_abc/src/: lib.rs
crates/vts_abc/vts-abc-sys/: Cargo.toml  abc_lib_names.txt  abc_lib_sources.json  parse-module-makefiles.py
crates/vts_abc/vts-abc-sys/src/: lib.rs
crates/vts_api/: Cargo.toml  pyproject.toml
crates/vts_api/python/vts_api/: __init__.py  _vts_api_rs.pyi
crates/vts_api/python/vts_api_rs/: arch.py
crates/vts_api/src/: arch.rs  lib.rs
crates/vts_api/src/arch/: component.rs  connection.rs  convert.rs  macros.rs  mod.rs  module.rs  port.rs  prelude.rs  reference.rs
crates/vts_api/src/arch/component/: de.rs  mod.rs  ser.rs
crates/vts_api/src/arch/module/: de.rs  mod.rs  ser.rs
crates/vts_api/src/arch/port/: de.rs  mod.rs  ser.rs
crates/vts_arch/: Cargo.toml
crates/vts_arch/python/vts_arch/: block.py
crates/vts_arch/src/: architecture.rs  component.rs  lib.rs  model.rs  module.rs  port.rs
crates/vts_arch_py/: Cargo.toml  pyproject.toml
crates/vts_arch_py/src/: lib.rs
crates/vts_cli/: Cargo.toml
crates/vts_cli/src/: design_entry.rs  main.rs
crates/vts_core/: Cargo.toml
crates/vts_core/src/: bytescanner.rs  database.rs  lib.rs  stringtable.rs
crates/vts_core/src/arch/: component.rs  macros.rs  mod.rs  module.rs  port.rs
crates/vts_core/src/arch/component/: de.rs  mod.rs  ser.rs
crates/vts_core/src/arch/module/: de.rs  mod.rs  ser.rs
crates/vts_core/src/arch/port/: de.rs  mod.rs  ser.rs
crates/vts_core/src/arch1/: de.rs  linker.rs  mod.rs  port.rs  reference.rs
crates/vts_core/src/blif/: buffer.rs  command.rs  error.rs  mod.rs  netlist.rs  reader.rs  token.rs
crates/vts_core/src/design/: database.rs
crates/vts_core/src/device/: database.rs  mod.rs  resources.rs
crates/vts_core/src/interchange/: mod.rs  yosys.rs
crates/vts_core/src/ir/: graph.rs  mod.rs  ops.rs  yosys.rs
crates/vts_core/src/place/: mod.rs
crates/vts_core/src/route/: mod.rs
crates/vts_core/src/synth/: aiger.rs
crates/vts_shared/: Cargo.toml
crates/vts_shared/src/: database.rs  interner.rs  lib.rs  stringtable.rs  symboltable.rs
crates/vts_yosys/: Cargo.toml
crates/vts_yosys/src/: lib.rs  netlist.rs
crates/vts_yosys/vts-yosys-sys/: CMakeLists.txt  Cargo.toml  bootstrap-yosys.py  build.rs  vts-yosys.cpp  wrapper.cpp  wrapper.h  yosys_lib_names.txt  yosys_lib_sources.json
crates/vts_yosys/vts-yosys-sys/include/techlibs/common/: simlib_help.inc
crates/vts_yosys/vts-yosys-sys/lib/frontends/rtlil/: rtlil_lexer.cc  rtlil_parser.tab.cc  rtlil_parser.tab.hh
crates/vts_yosys/vts-yosys-sys/lib/frontends/verilog/: verilog_lexer.cc  verilog_parser.tab.cc  verilog_parser.tab.hh
crates/vts_yosys/vts-yosys-sys/lib/kernel/: version_vts.cc
crates/vts_yosys/vts-yosys-sys/src/: lib.rs
examples/alu/: Makefile  add4.aag  add4.aig  add4.json  add4.rtlil  add4_abc.json  add4_abc.rtlil  add4_flowmap.json  add4_flowmap.rtlil  add4_simplemap.json  add4_simplemap.rtlil  add4_trim.aag  alu4.aag  alu4.aig  alu4.json  alu4.rtlil  alu4_abc.json  alu4_abc.rtlil  alu4_flowmap.json  alu4_flowmap.rtlil  alu4_lut_pack.json  alu4_simplemap.json  alu4_simplemap.rtlil  alu4_trim.aag  synth.ys
examples/crc/: Makefile  crc16.aag  crc16.aig  crc16.json  crc16.rtlil  crc16_flowmap.json  crc16_flowmap.rtlil  crc16_lut_pack.json  crc16_simplemap.json  crc16_simplemap.rtlil  crc16_trim.aag  crc8.aag  crc8.aig  crc8.json  crc8.rtlil  crc8_flowmap.json  crc8_flowmap.rtlil  crc8_simplemap.json  crc8_simplemap.rtlil  crc8_trim.aag  synth.ys
examples/sr/: Makefile  sr.aag  sr.aig  sr.json  sr.rtlil  sr.sv  sr_abc.json  sr_abc.rtlil  sr_flowmap.json  sr_flowmap.rtlil  sr_lut_pack.json  sr_simplemap.json  sr_simplemap.rtlil  sr_trim.aag  synth.ys
python/tests/: test_arch.py
python/vts/: __init__.py  _vts_api_rs.pyi  arch.py  cell.py  device.py  placement.py  port.py  property.py
python/vts/_vts/: arch.pyi
python/vts/arch/: __init__.py  component.py  module.py  port.py
requirements/: build.txt  check.txt  dev.in  dev.txt  format.txt  notebook.in  notebook.txt  tests.txt
vts_abc/: Cargo.toml
vts_abc/src/: lib.rs
vts_abc/vts-abc-sys/: CMakeLists.txt  Cargo.toml  abc_c_sources.txt  abc_cxx_sources.txt  abc_lib_sources.json  abc_sources.txt  build.rs  module_names.txt  parse-module-makefiles.py
vts_abc/vts-abc-sys/src/: lib.rs
vts_api/: Cargo.toml
vts_api/src/: lib.rs
vts_api/src/arch/: component.rs  connection.rs  macros.rs  mod.rs  module.rs  port.rs  prelude.rs  reference.rs
vts_circt/: Cargo.toml
vts_circt/circt-sys/: Cargo.toml  build.rs  wrapper.cpp  wrapper.h
vts_circt/circt-sys/src/: bindings.rs  lib.rs
vts_cli/src/: design_entry.rs  main.rs
vts_core/: Cargo.toml
vts_core/src/: bytescanner.rs  ir.rs  lib.rs  stringtable.rs
vts_core/src/arch/: checker.rs  component.rs  connection.rs  de.rs  linker.rs  mod.rs  module.rs  port.rs  prelude.rs  reference.rs  ser.rs  validate.rs
vts_core/src/arch/builder/: prelude.rs
vts_core/src/arch/component/: connection.rs  mod.rs  ser.rs
vts_core/src/arch/module/: de.rs  mod.rs
vts_core/src/arch/port/: de.rs  mod.rs
vts_core/src/blif/: buffer.rs  command.rs  error.rs  mod.rs  netlist.rs  reader.rs
vts_core/src/ir/: graph.rs  yosys.rs
vts_core/tests/: add4.llhd  alu4.llhd  crc16.llhd  crc8.llhd  ir_test.rs  sr.llhd
