[project]
name = "vts"
version = "0.1.1"
authors = [{ name = "Rikus Honey", email = "rikushoney2@gmail.com" }]
requires-python = ">=3.10"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
manifest-path = "vts_api/Cargo.toml"
python-source = "python"
module-name = "vts._vts"

[tool.black]
line-length = 88

[tool.ruff.lint]
select = ["F", "E", "W", "N", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
combine-as-imports = true
