[project]
name = "vts"
version = "0.1.2"
authors = [{ name = "Rikus Honey", email = "rikushoney2@gmail.com" }]
requires-python = ">=3.8"
description = "A framework for SFPGA architecture exploration"
readme = "README.md"
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: Apache Software License",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Rust",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/rikushoney/vts"
Repository = "https://github.com/rikushoney/vts"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "vts_api/Cargo.toml"
python-source = "python"
module-name = "vts._vts"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
  "F",   # pyflakes
  "E",   # pycodestyle (errors)
  "W",   # pycodestyle (warnings)
  "N",   # pep8-naming
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # bugbear
  "PIE", # flake8-pie
  "SIM", # flake8-simplify
  "COM", # flake8-commas
  "C4",  # flake8-comprehensions
  "PYI", # flake8-pyi
]
ignore = ["E501"]

[tool.ruff.lint.isort]
combine-as-imports = true
# required-imports = ["from __future__ import annotations"]
