[package]
name = "vts_api"
version = "0.1.0"
edition = "2021"

[dependencies]
fnv.workspace = true
thiserror.workspace = true
vts_core.workspace = true
pyo3 = "0.21.2"

[lib]
name = "_vts_api_rs"
crate-type = ["cdylib"]

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]
abi3-py310 = ["pyo3/abi3-py310"]
