[package]
name = "vts_core"
version = "0.0.0"
edition = "2021"

[dependencies]
fnv.workspace = true
itertools.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

slotmap = "1.0.7"
serde_yaml = "0.9.34"
toml = "0.8.12"
ustr = { version = "1.0.0", features = ["serde"] }
