[package]
name = "vts_core"
version = "0.0.0"
edition = "2021"

[dependencies]
fnv.workspace = true
itertools.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

slotmap = "1.0"
serde_yaml = "0.9"
toml = "0.8"
ustr = { version = "1.0", features = ["serde"] }
